-- Version 2.21.0, released ...

 * Support for Minecraft 1.20's new blocks has been added
 * Custom Biomes can now also have custom patterns configured for rendering
   + To create or edit a pattern, click on the [...] button next to the Paint label on the Configure Custom Biome screen
   + Note that for Custom Biomes the opacity cannot be changed
 * Fence blocks and other connecting blocks from old Custom Objects, from old Minecraft versions that used to automatically manage those connections, will now be automatically connected to their neighbours on Export
   + It only does this for .bo2, .bo3 and .schematic objects
 * Structures (.nbt files) now always have their offset guesstimated when loading them as Custom Objects, since they do not store an offset. This will increase the chance that they will be placed correctly by default
 * Some biomes have received a slightly more distinctive pattern and/or colour
 * Bug fix: fix an error that occurred when Importing Minecraft 1.12 maps with custom biomes

-- Version 2.20.0, released 13-8-2023

 * All custom layer types can now be rendered with custom patterns in addition to solid colours
   + To create or edit a pattern, click on the [...] button next to the Paint label on the layer's settings screen
   + This will open a very simple editor which allows you to choose a solid colour, or a transparent canvas, and then apply a pattern to it using a simple pencil tool and limited colour palette
   + The pattern will also be shown as the layer's icon on the palette
   + There is a separate slider to set the opacity of the layer (when it is at 100% intensity)
 * A new Custom Annotation layer type has been added
   + It is a very simple layer type that is not Exported and only serves to make custom annotations for display in the editor view, or as markers for scripts or complex operations
   + The new patterned layer rendering support described above also applies to these new Custom Annotation Layers