@@ -242,6 +242,28 @@ public class Plants {
         }
     };
     public static final Plant MANGROVE_PROPAGULE = new SimplePlant("Mangrove Propagule", Material.MANGROVE_PROPAGULE, SAPLINGS, WATER_PLANTS);
+    public static final Plant SAPLING_CHERRY = new SimplePlant("Cherry Sapling", Material.CHERRY_SAPLING, SAPLINGS);
+    public static final Plant PINK_PETALS = new PlantWithGrowth("Pink Petals", Material.PINK_PETALS_1, null, 4, PLANTS_AND_FLOWERS) {
+        @Override
+        public Plant realise(int growth, Platform platform) {
+            return new SimplePlant("Pink Petals", PINK_PETALS_1
+                    .withProperty(FLOWER_AMOUNT, growth)
+                    .withProperty(FACING, Direction.values()[RANDOM.nextInt(4)]), PLANTS_AND_FLOWERS);
+        }
+    };
+    public static final Plant PITCHER_POD = new AgingPlant("Pitcher Pod", Material.PITCHER_CROP_0_LOWER, null, 5, CROPS) {
+        @Override
+        public Plant realise(int growth, Platform platform) {
+            if (growth < 4) {
+                return new SimplePlant("Pitcher Pod", Material.PITCHER_CROP_0_LOWER.withProperty(AGE, growth - 1), CROPS);
+            } else {
+                return new DoubleHighPlant("Pitcher Pod", Material.PITCHER_CROP_0_LOWER.withProperty(AGE, growth - 1), CROPS, platform);
+            }
+        }
+    };
+    public static final Plant PITCHER_PLANT = new DoubleHighPlant("Pitcher Plant", Material.PITCHER_PLANT_LOWER, PLANTS_AND_FLOWERS);
+    public static final Plant TORCHFLOWER_SEED = new AgingPlant("Torchflower Seed", Material.TORCHFLOWER_CROP, null, 2, CROPS);
+    public static final Plant TORCHFLOWER = new SimplePlant("Torchflower", Material.TORCHFLOWER, PLANTS_AND_FLOWERS);
 
     // The code which uses this assumes there will never be more than 128 plants. If that ever happens it needs to be
     // overhauled! IMPORTANT: indices into this array are stored in layer settings! New entries MUST be added at the
@@ -256,7 +278,8 @@ public class Plants {
             BAMBOO, SAPLING_AZALEA, SAPLING_FLOWERING_AZALEA, CRIMSON_FUNGUS, WARPED_FUNGUS, CRIMSON_ROOTS,
             WARPED_ROOTS, NETHER_SPROUTS, TWISTING_VINES, GLOW_LICHEN, MOSS_CARPET, BIG_DRIPLEAF, PUMPKIN, MELON,
             CARVED_PUMPKIN, JACK_O_LANTERN, VINE, SPORE_BLOSSOM, WEEPING_VINES, HANGING_ROOTS, GLOW_BERRIES,
-            SMALL_DRIPLEAF, MANGROVE_PROPAGULE };
+            SMALL_DRIPLEAF, MANGROVE_PROPAGULE, SAPLING_CHERRY, PINK_PETALS, PITCHER_POD, PITCHER_PLANT,
+            TORCHFLOWER_SEED, TORCHFLOWER };
 
     private static final Random RANDOM = new Random();
 }
