@@ -12,10 +12,11 @@ import org.pepsoft.worldpainter.plugins.PlatformManager;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
-import static org.pepsoft.minecraft.Material.*;
+import static java.util.stream.Collectors.joining;
+import static org.pepsoft.minecraft.Material.AIR;
+import static org.pepsoft.minecraft.Material.LEVEL;
 import static org.pepsoft.worldpainter.Constants.DIM_NORMAL;
 
 /**
@@ -113,126 +114,94 @@ x:          for (int x = 0; x < 16; x++) {
                 continue;
             }
             System.out.println("X-->");
-//            SortedMap<String, Set<Material>> materialsInSlice = new TreeMap<>();
+            SortedMap<String, Set<Material>> materialsInSlice = new TreeMap<>();
             for (int z = 0; z < 16; z++) {
-                for (int i = 0; i < 3; i++) {
-                    for (int x = 0; x < 16; x++) {
-                        Material material = chunk.getMaterial(x, y, z);
-//                        Integer waterLevel = material.getProperty(LEVEL);
-                        if (material != AIR) {
-                            String name = material.name;
-                            name = name.substring(name.indexOf(':') + 1);
-                            switch (i) {
-                                case 0:
-                                    if (material.is(NORTH)) {
-                                        System.out.print("  |  ");
-                                    } else {
-                                        System.out.print("     ");
-                                    }
+                for (int x = 0; x < 16; x++) {
+                    Material material = chunk.getMaterial(x, y, z);
+                    Integer waterLevel = material.getProperty(LEVEL);
+                    if (material != AIR) {
+                        String name = material.name;
+                        name = name.substring(name.indexOf(':') + 1);
+                        String property = "";
+                        Map<String, String> propertyMap = material.getProperties();
+                        if (propertyMap != null) {
+                            for (Map.Entry<String, String> entry: propertyMap.entrySet()) {
+                                String value = entry.getValue();
+                                if (value.equals("true")) {
+                                    property = entry.getKey();
                                     break;
-                                case 2:
-                                    if (material.is(WEST)) {
-                                        System.out.print("--");
-                                    } else {
-                                        System.out.print("  ");
-                                    }
-                                    System.out.print(Character.toUpperCase(name.charAt(0)));
-                                    if (material.is(EAST)) {
-                                        System.out.print("--");
-                                    } else {
-                                        System.out.print("  ");
-                                    }
+                                } else if (! value.equals("false")) {
+                                    property = value;
                                     break;
-                                case 1:
-                                    if (material.is(SOUTH)) {
-                                        System.out.print("  |  ");
-                                    } else {
-                                        System.out.print("     ");
-                                    }
-                                    break;
+                                }
                             }
-//                            String property = "";
-//                            Map<String, String> propertyMap = material.getProperties();
-//                            if (propertyMap != null) {
-//                                for (Map.Entry<String, String> entry: propertyMap.entrySet()) {
-//                                    String value = entry.getValue();
-//                                    if (value.equals("true")) {
-//                                        property = entry.getKey();
-//                                        break;
-//                                    } else if (! value.equals("false")) {
-//                                        property = value;
-//                                        break;
-//                                    }
-//                                }
-//                            }
-//                            String tag;
-//                            if (material.tileEntity) {
-//                                int count = 0;
-//                                for (Iterator<TileEntity> i = tileEntities.iterator(); i.hasNext(); ) {
-//                                    TileEntity tileEntity = i.next();
-//                                    if ((tileEntity.getX() == x) && (tileEntity.getY() == y) && (tileEntity.getZ() == z)) {
-//                                        count++;
-//                                        i.remove();
-//                                    }
-//                                }
-//                                if (count == 1) {
-//                                    tag = String.format("[%3.3s:%2.2s]", name, property);
-//                                } else {
-//                                    tag = String.format("!%3.3s!%2d!", name, count);
-//                                }
-//                            } else {
-//                                tag = String.format("[%3.3s:%2.2s]", name, property);
-//                            }
-//                            System.out.print(tag);
-//                            if (chunk.getSkyLightLevel(x, y, z) == 15) {
-//                                System.out.printf("[%3.3s:  ]", name);
-//                            } else {
-//                                System.out.printf("[%3.3s:%2d]", name, chunk.getSkyLightLevel(x, y, z));
-//                            }
-//                            if (waterLevel == null) {
-//                                System.out.printf("[%3.3s:  ]", name);
-//                            } else {
-//                                System.out.printf("[%3.3s:%2d]", name, waterLevel);
-//                            }
-//                            materialsInSlice.computeIfAbsent(name, materialsForTag -> new HashSet<>()).add(material);
-//                            if (chunk.getBlockLightLevel(x, y, z) == 0) {
-//                                System.out.printf("[%3.3s:  ]", name);
-//                            } else {
-//                                System.out.printf("[%3.3s:%2d]", name, chunk.getBlockLightLevel(x, y, z));
-//                            }
-//                            System.out.printf("[%3.3s:%2d]", name, chunk.getBlockLightLevel(x, y, z));
-                        } else {
-                            System.out.print("     ");
-//                            if (chunk.getSkyLightLevel(x, y, z) == 15) {
-//                                System.out.print("[   :  ]");
-//                            } else {
-//                                System.out.printf("[   :%2d]", chunk.getSkyLightLevel(x, y, z));
-//                            }
-//                            if (waterLevel == null) {
-//                                System.out.print("[   :  ]");
-//                            } else {
-//                                System.out.printf("[   :%2d]", waterLevel);
-//                            }
-//                            if (chunk.getBlockLightLevel(x, y, z) == 0) {
-//                                System.out.print("[   :  ]");
-//                            } else {
-//                                System.out.printf("[   :%2d]", chunk.getBlockLightLevel(x, y, z));
-//                            }
                         }
+                        String tag;
+                        if (material.tileEntity) {
+                            int count = 0;
+                            for (Iterator<TileEntity> i = tileEntities.iterator(); i.hasNext(); ) {
+                                TileEntity tileEntity = i.next();
+                                if ((tileEntity.getX() == x) && (tileEntity.getY() == y) && (tileEntity.getZ() == z)) {
+                                    count++;
+                                    i.remove();
+                                }
+                            }
+                            if (count == 1) {
+                                tag = String.format("[%3.3s:%2.2s]", name, property);
+                            } else {
+                                tag = String.format("!%3.3s!%2d!", name, count);
+                            }
+                        } else {
+                            tag = String.format("[%3.3s:%2.2s]", name, property);
+                        }
+//                        System.out.print(tag);
+//                        if (chunk.getSkyLightLevel(x, y, z) == 15) {
+//                            System.out.printf("[%3.3s:  ]", name);
+//                        } else {
+//                            System.out.printf("[%3.3s:%2d]", name, chunk.getSkyLightLevel(x, y, z));
+//                        }
+                        if (waterLevel == null) {
+                            System.out.printf("[%3.3s:  ]", name);
+                        } else {
+                            System.out.printf("[%3.3s:%2d]", name, waterLevel);
+                        }
+                        materialsInSlice.computeIfAbsent(name, materialsForTag -> new HashSet<>()).add(material);
+//                        if (chunk.getBlockLightLevel(x, y, z) == 0) {
+//                            System.out.printf("[%3.3s:  ]", name);
+//                        } else {
+//                            System.out.printf("[%3.3s:%2d]", name, chunk.getBlockLightLevel(x, y, z));
+//                        }
+//                        System.out.printf("[%3.3s:%2d]", name, chunk.getBlockLightLevel(x, y, z));
+                    } else {
+//                        if (chunk.getSkyLightLevel(x, y, z) == 15) {
+//                            System.out.print("[   :  ]");
+//                        } else {
+//                            System.out.printf("[   :%2d]", chunk.getSkyLightLevel(x, y, z));
+//                        }
+                        if (waterLevel == null) {
+                            System.out.print("[   :  ]");
+                        } else {
+                            System.out.printf("[   :%2d]", waterLevel);
+                        }
+//                        if (chunk.getBlockLightLevel(x, y, z) == 0) {
+//                            System.out.print("[   :  ]");
+//                        } else {
+//                            System.out.printf("[   :%2d]", chunk.getBlockLightLevel(x, y, z));
+//                        }
                     }
-                    if ((z * 3 + i) == 0) {
-                        System.out.print(" Z");
-                    } else if ((z * 3 + i) == 1) {
-                        System.out.print(" |");
-                    } else if ((z * 3 + i) == 2) {
-                        System.out.print(" v");
-                    } else if ((z * 3 + i) == 47) {
-                        System.out.print(" Y: " + y);
-                    }
-                    System.out.println();
                 }
+                if (z == 0) {
+                    System.out.print(" Z");
+                } else if (z == 1) {
+                    System.out.print(" |");
+                } else if (z == 2) {
+                    System.out.print(" v");
+                } else if (z == 15) {
+                    System.out.print(" Y: " + y);
+                }
+                System.out.println();
             }
-//            materialsInSlice.forEach((tag, materials) -> System.out.println(tag + ": " + materials.stream().map(Material::toFullString).collect(joining(", "))));
+            materialsInSlice.forEach((tag, materials) -> System.out.println(tag + ": " + materials.stream().map(Material::toFullString).collect(joining(", "))));
 
             for (Entity entity: entities) {
                 if ((entity.getPos()[1] >= y) && (entity.getPos()[1] < (y + 1))) {
